--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
   "bugs": {
     "url": "https://github.com/StepanKhvatov/mesto/issues"
   },
-  "homepage": "https://github.com/StepanKhvatov/mesto"
+  "homepage": "https://stepankhvatov.github.io/mesto/"
 }
